--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </button>
     <div class="chatbot">
       <header>
-        <h2>Chatbot</h2>
+        <h2><strong>MojehBot</strong></h2>
         <span class="close-btn material-symbols-outlined">close</span>
       </header>
       <ul class="chatbox">
